// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestActions Should match snapshot with data 1`] = `
<div>
   
  <button
    class="sc-bdfBQB cAORUT"
    data-testid="open-stake-tokens-modal-btn"
  >
    Join
  </button>
   
</div>
`;

exports[`GuestActions Should match snapshot without data 1`] = `
<div>
   
  <button
    class="sc-bdfBQB cAORUT"
  >
    Connect Wallet
  </button>
   
</div>
`;
